# url-shortening

./: .autoenv.zsh  .env  .gitignore  .python-version  Cargo.toml  README.md  diesel.toml  requirements.txt
dj/proj/: asgi.py  settings.py  urls.py  wsgi.py
dj/scripts/: create_diesel_toml.py
dj/url_shortening/: apps.py  models.py
dj/url_shortening/migrations/: 0001_initial.py
etc/docs/: api_docs.md
etc/zsh/: auto.sh
service/: Cargo.toml
service/src/: main.rs
service/src/base/: mod.rs
service/src/models/: db.rs  mod.rs  prelude.rs  schema.rs  url.rs
service/src/routes/: create.rs  get.rs  mod.rs
url_shortening/: apps.py
