[package]
name = "service"
version = "0.1.0"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
#routes = { path = "src/routes" }
actix-web = "3.1.0"
dotenv = "0.14.1"
env_logger = "0.7"
log = "0.4"
serde_derive = "1.0.117"
serde = "1.0.117"
chrono = {version="0.4",features = ["serde"]}
serde_json = "1.0.59"
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.9"
lazy_static = "1"